<resources>
    <string name="app_name">StarBugsSharing</string>
    <string name="mainText">делитесь поездками. делитесь звёздами. покоряйте Марс.</string>
    <string name="startNow">Начать сейчас</string>
    <string name="mainFooter1">Современные технологии</string>
    <string name="mainFooter2">Наши марсоходы оснащены передовыми технологиями для оптимального исследования.</string>
    <string name="mainFooter3">Экспертная поддержка</string>
    <string name="mainFooter4">Наша команда экспертов доступна 24/7 для помощи во время Вашего приключения на Марсе.</string>
    <string name="mainFooter5">Индивидуальный опыт</string>
    <string name="mainFooter6">Настройте свое путешествие с нашими опциями марсоходов, подобранными под Ваши потребности.</string>
    <string name="mainFooter7">Наша миссия - сделать исследование Марса доступным для всех.</string>
    <string name="mainFooter8">В StarBugsSharing мы стремимся предоставить беспрецендентные возможности для изучения Красной планеты.</string>

    <string name="byDefault">по умолчанию</string>
    <string name="byFare">по тарифу</string>
    <string name="byMileage">по пробегу</string>
    <string name="bySpeed">по скорости</string>
    <string name="Rent">Арендовать</string>
    <string name="PDD">ПДД</string>
    <string name="ChaVo">ЧаВо</string>
    <string name="StarBugsPlus">StarBugs++</string>
    <string name="exit">Выйти</string>
    <string name="profile">Профиль</string>

    <string name="myProfile">Мой профиль</string>
    <string name="balance">Баланс</string>
    <string name="ru">рублей</string>
    <string name="replenish">Пополнить</string>
    <string name="activate">Активировать</string>
    <string name="rentalHistory">История аренды</string>
    <string name="UsePromoCode">Использовать промокод</string>

    <string name="PDDHead">Правила дорожного движения на Марсе для марсоходов могут отличаться от
        правил на Земле из-за различий в атмосфере, поверхности и особенностей марсианской транспортной инфраструктуры. Ниже представлены
общие рекомендации, которые могут быть актуальными для движения марсоходов на Марсе:</string>
    <string name="PDD1">Соблюдайте безопасную скорость</string>
    <string name="PDD1Answer">Учитывайте поверхностные условия и ограничения марсохода при определении
        безопасной скорости движения. Внимательно следите за показаниями инструментов.</string>
    <string name="PDD2">Соблюдайте дистанцию</string>
    <string name="PDD2Answer">Держитесь на безопасном расстоянии от других марсоходов и объектов,
        чтобы избежать столкновений и обеспечить безопасность движения.</string>
    <string name="PDD3">Уступайте дорогу</string>
    <string name="PDD3Answer">Уступайте дорогу марсоходам, находящимся в приоритете или двигающимся быстрее. Уважайте правило “правой руки".</string>
    <string name="PDD4">Используйте световую сигнализацию</string>
    <string name="PDD4Answer">Если это предусмотрено в конструкции марсохода, используйте световые сигналы для указания направления движения и намерений.</string>
    <string name="PDD5">Соблюдайте экологию:</string>
    <string name="PDD5Answer">Соблюдайте правила и рекомендации по охране марсианской среды. Не загрязняйте поверхность Марса.</string>
    <string name="PDD6">Соблюдайте зоны ограничений:</string>
    <string name="PDD6Answer">Соблюдайте зоны ограничений и запретов, установленные местными властями или исследовательскими миссиями.</string>
    <string name="PDD7">Обязательное обслуживание:</string>
    <string name="PDD7Answer">Регулярно проводите обслуживание и проверку марсохода, чтобы гарантировать его надежную и безопасную работу.</string>
    <string name="PDD8">Следуйте инструкциям миссии:</string>
    <string name="PDD8Answer">Если вы участвуете в научной миссии или исследовательском проекте, строго следуйте инструкциям и распоряжениям командования.</string>
    <string name="PDD9">Соблюдайте моральные нормы:</string>
    <string name="PDD9Answer">Уважайте правила и нормы морального поведения на Марсе и в рамках международных миссий.</string>
    <string name="PDD10">Соблюдайте радиосвязь:</string>
    <string name="PDD10Answer">Поддерживайте радиосвязь с другими марсоходами и миссионным контролем для обеспечения безопасности и координации.</string>

    <string name="ChaVo0">frequently asked questions</string>
    <string name="ChaVo1">Как я могу арендовать марсоход?</string>
    <string name="ChaVo1Answer">Для аренды марсохода просто зайдите на наш веб-сайт, выберите подходящую модель марсохода, укажите даты аренды и заполните
необходимую информацию. Наш менеджер свяжется с вами для уточнения деталей.</string>
    <string name="ChaVo2">Каков срок аренды марсохода?</string>
    <string name="ChaVo2Answer">Срок аренды может варьироваться в зависимости от ваших потребностей. Мы предлагаем гибкие варианты, начиная от нескольких дней до
длительных миссий. Обсудите свои требования с нашими специалистами, чтобы мы могли предложить оптимальное решение.</string>
    <string name="ChaVo3">Каковы технические характеристики доступных марсоходов?</string>
    <string name="ChaVo3Answer">Наши марсоходы оборудованы передовой технологией для исследования марсианской поверхности. Технические характеристики включают
в себя системы навигации, научные инструменты и возможности передачи данных.</string>
    <string name="ChaVo4">Какие возможности обеспечивает ваша техподдержка во время миссии?</string>
    <string name="ChaVo4Answer">Наша техподдержка доступна 24/7 для решения технических вопросов и оперативного реагирования на любые
проблемы во время миссии. Мы также предоставляем удаленный мониторинг и диагностику оборудования.</string>
    <string name="ChaVoFooter1">Если у вас остались вопросы, вы можете обратиться в нашу службу поддержки</string>
    <string name="ChaVoFooter2">©2024, StarBugsSharing</string>

    <string name="StarBugsPlusBody1">Подписка для настоящих покорителей Марса</string>
    <string name="StarBugsPlusBody2">Подписка StarBugs++ предоставляет вам доступ к абсолютно любому марсоходу, используя Credits.</string>
    <string name="StarBugsPlusBody3">Всё просто:</string>
    <string name="StarBugsPlusBody4">Выбирайте любой из доступных марсоходов\nОтдаёте Credits в
        зависимости от текущего спроса\nИспользуете его для ваших нужд.\nКогда надоедает — освобождаете и получаете Credits обратно\nВсе в плюсе!</string>
    <string name="StarBugsPlusFooter1">Также вы можете оформить пробный период на 14 дней.\nОтмените в любой удобный вам момент.</string>

</resources>