<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentActivity">

    <ImageView
        android:id="@+id/imageBgMars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_img" />

    <LinearLayout
        android:id="@+id/linLayHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/header">

        <Button
            android:id="@+id/btnRent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/Rent"
            android:textAlignment="viewEnd"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicRent" />

        <Button
            android:id="@+id/btnPDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/PDD"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicPDD" />

        <Button
            android:id="@+id/btnChaVo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/ChaVo"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicChaVo" />

        <Button
            android:id="@+id/btnStarBugsPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/StarBugsPlus"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            app:cornerRadius="0sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/header"
            android:text="@string/profile"
            android:textColor="@color/header_text"
            app:cornerRadius="6dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp"
            android:onClick="btnClicProfile"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/header"
            android:text="@string/exit"
            android:textColor="@color/header_text"
            app:cornerRadius="6dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linLayHeader"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StarBugsPlusBody1"
            android:textColor="@color/header_text"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:text="@string/StarBugsPlus"
            android:textColor="@color/header_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/StarBugsPlusBody2"
            android:textColor="@color/header_text"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/StarBugsPlusBody3"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/StarBugsPlusBody4"
            android:textColor="@color/header_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StarBugsPlusFooter1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/footer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/header"
        android:text="@string/ChaVoFooter2"
        android:textColor="@color/header_text"
        android:textAlignment="center" />

</RelativeLayout>