<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBgMars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_img" />

    <LinearLayout
        android:id="@+id/linLayHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/header">

        <Button
            android:id="@+id/btnRent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/Rent"
            android:textAlignment="viewEnd"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicRent" />

        <Button
            android:id="@+id/btnPDD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/PDD"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicPDD" />

        <Button
            android:id="@+id/btnChaVo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/ChaVo"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicChaVo" />

        <Button
            android:id="@+id/btnStarBugsPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/invisible"
            android:text="@string/StarBugsPlus"
            android:textColor="@color/header_text"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            app:cornerRadius="0sp"
            android:onClick="btnClicStarBugsPlus" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAstronaut"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/astronaut_svgrepo_com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageAstronaut"
        android:text="@string/myProfile"
        android:textColor="@color/header_text"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageAstronaut"
        android:text="Имя Телефон Email"
        android:textColor="@color/header_text"
        android:textSize="15sp"
        android:layout_marginTop="15sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/header"
            android:text="@string/profile"
            android:textColor="@color/header_text"
            app:cornerRadius="6dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/header"
            android:text="@string/exit"
            android:textColor="@color/header_text"
            app:cornerRadius="6dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:text="@string/balance"
        android:textColor="@color/header_text"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="75dp"
        android:text="999.9"
        android:textColor="@color/header_text"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ru"
        android:textColor="@color/header_text"
        android:textStyle="bold"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:text="@string/replenish"
        android:backgroundTint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:text="@string/UsePromoCode"
        android:textColor="@color/header_text"
        android:textStyle="bold"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editPromoCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="20dp"
        android:background="#40000000"
        android:inputType="text" />

    <Button
        android:id="@+id/btnUsePromoCode"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/linLayHeader"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:text="@string/activate"
        android:backgroundTint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUsePromoCode"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/rentalHistory"
        android:textColor="@color/header_text"
        android:textStyle="bold"
        android:textSize="15sp" />

</RelativeLayout>